# what2

./: .gitignore  README.md  TODO.md  conftest.py  pyproject.toml  tasks.py
src/what2/: util.py
src/what2/debug/: debug.py  notebook.py
src/what2/testing/: __init__.py  pytest.py
tests/: test_simple.py  test_static.py
