[project]
name = "what2"
version = "0.4.3"
description = "A collection of my random dev tools and scripts."
authors = [
    {name = "Marc Edwards", email = "marc@mlwhat.com"}
]
dependencies = ["regex>=2024.11.6"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
]

[project.urls]
Repository = "https://github.com/alwaysmpe/what2"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = """\
--doctest-modules \
--doctest-ignore-import-errors \
--ignore=tasks.py \
--tb=short \
"""

[tool.pyright]

pythonVersion = "3.13"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportImplicitOverride = true
typeCheckingMode  = "strict"
exclude = [
    "**/.ipynb_checkpoints/*",
    "**/.venv/",
]
ignore =  [
    "**/.ipynb_checkpoints/*",
    "**/.venv/",
]

[tool.ruff]

namespace-packages = ["src/what2"]
line-length = 260
indent-width = 4
target-version = "py313"
exclude = [
    "**/.ipynb_checkpoints/*",
    "**/.venv/",
    "tasks.py",
    "exp.py",
]

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]

preview = true
select = [
    "ALL",
    # aren't selected by all due to conflicts
    "D213",
    "D215",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D408",
    "D409",
    "D410",
    "D411",
    "D417",
]

ignore = [
    "DOC", # pydoclint doesn't support pep257
    "FIX002", # Line contains TODO    "TC001",
    "TD003", # Missing issue link after TODO
    "TD002", # Missing authon in TODO - it's me, hi, I'm the problem it's me.
    "TC002",
    "TC003",
    "PLC0414",
    "PLR0915",
    "PLR0912",
    "C901",
    "N811",
    "EM101",
    "T201",
    "S101", # using asserts - meh
    "UP044", # Use * for unpacking - false positives
    "CPY001", # missing copyright notice
    "D105",
    "D107", # Missing docstring in __init__ - use class docstring.
    "D200", # One line docstring should be on one line - preference.
    "D203",
    "D205",
    "D212",
    "E261", # At least 2 spaces before an inline comment - why?
    "TRY002",
    "TRY003",
    "FIX001",
    "FIX003",
    "FIX004",
    "RET503",
    "RET504",
    "RET505", # Unnecessary else after return - sometimes its clearer.
    "PD901",
    "SIM108",
    "PLW1641", # implement eq without hash - what if it's mutable?
    "PYI025", # import Set as AbstractSet - No.
]

[tool.ruff.lint.per-file-ignores]

"tests/*" = [
    "D",
    "ANN",
    "PLR2004",
    "S404",
    "S603",
    "T201",
    "FBT003",
]

[tool.ruff.lint.flake8-quotes]

avoid-escape = false
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]

ban-relative-imports = "all"

[tool.ruff.lint.isort]

force-sort-within-sections = true
forced-separate = ["what2*", "tests", "pytest", "_pytest"]

[tool.ruff.lint.pydocstyle]

convention = "pep257"

[tool.pylama]

ignore = "E261,C901,W0611"

skip = """\
*.ipynb_checkpoints/*,\
"""

max_line_length = 260

format = "pylint"

[tool.deptry.per_rule_ignores]
DEP001 = ["IPython"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/what2"]


[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-order>=1.3.0",
    "pytest-gitignore>=1.3",
    "setuptools>=75.2.0",
    "toml>=0.10.2",
    "what2-time>=0.3.1",
    # code analysis tools - use latest where possible, fix what breaks.
    "basedpyright",
    "ruff",
    "pylama",
    "darglint2",
    "vulture",
    "deptry",
]
